# qml-supervised

./: .gitignore  Dockerfile  LICENSE  README.md  ReadInData.R  basis_embedding.py  check_sharding.py  classical_kernel.ipynb  create_docstring_circuit.py  data_names.yaml  demo.py  demo2.py  example.ipynb  generate_train_test_plots.py  iqp_embedd.py  kernel_based_training.py  kernel_matrix.py  main.py  pyproject.toml  pytest.ini  requirements.txt  statevector.py  symbolic-derivations.ipynb  test.py  test_artificial_data.py  update requirements
10-fold-SCV-AUC-AngleX-IQP-results/: QSVM_ctg_new_times.csv  QSVM_fertility_new_results.csv  QSVM_haberman_new_times.csv  QSVM_nafld_new_times.csv
QSVM-10-fold-AngleX-IQP-AUC/: QSVM_hcv_new_results.csv  QSVM_heroin_new_times.csv  QSVM_sobar_new_results.csv
SVM-10-fold-AUC/: SVM_fertility_new_results.csv  SVM_hcv_new_results.csv  SVM_heroin_new_results.csv  SVM_nafld_new_results.csv  SVM_sobar_new_results.csv  SVM_wdbc_new_results.csv
SVM-10-fold-MCC/: SVM_cervical_new_results.csv  SVM_ctg_new_results.csv  SVM_fertility_new_results.csv  SVM_heroin_new_results.csv
SVM-5-fold-AUC/: SVM_cervical_new_results.csv  SVM_ctg_new_results.csv  SVM_fertility_new_results.csv  SVM_haberman_new_results.csv  SVM_hcv_new_results.csv  SVM_heroin_new_results.csv  SVM_nafld_new_results.csv  SVM_wdbc_new_results.csv
SVM-5-fold-MCC/: SVM_fertility_new_results.csv  SVM_haberman_new_results.csv  SVM_wdbc_new_results.csv
data/: cervical_new.csv  ctg_new.csv  fertility_new.csv  haberman_new.csv  hcv_new.csv  heroin_new.csv  nafld_new.csv  (+2 more)
(+303 files in other folders)
